--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -60,10 +60,9 @@ document_templates_001:
   creator_id: 1
   by_default: true
   id: 1
-  language: 'FRA'
+  language: 'fra'
   name: "AN"
   nature: sales_invoice
-  source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -74,10 +73,9 @@ document_templates_002:
   creator_id: 1
   by_default: true
   id: 2
-  language: 'FRA'
+  language: 'fra'
   name: "FA"
   nature: sales_invoice
-  source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
