--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -36,7 +36,7 @@
 #  indivisible            :boolean          not null
 #  lock_version           :integer          default(0), not null
 #  name                   :string(255)      not null
-#  number                 :string(32)       not null
+#  number                 :string(31)       not null
 #  producible             :boolean          not null
 #  product_account_id     :integer
 #  purchasable            :boolean          not null
@@ -55,7 +55,7 @@
 #  unit_id                :integer          not null
 #  updated_at             :datetime         not null
 #  updater_id             :integer
-#  variety_id             :integer          not null
+#  variety                :string(127)      not null
 #
 #
 # == Fixture: product_natures
@@ -87,7 +87,7 @@
 #   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   variety_id: 1
+#   variety: "Lorem ipsum"
 #
 
 product_natures_001:
@@ -114,7 +114,7 @@ product_natures_001:
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety_id: 1
+  variety: "animal"
 
 product_natures_002:
   active: true
@@ -140,7 +140,7 @@ product_natures_002:
   unit_id: 2
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 2
-  variety_id: 2
+  variety: "animal"
 
 product_natures_003:
   active: true
@@ -166,5 +166,5 @@ product_natures_003:
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety_id: 1
+  variety: "plant"
 
