--- a/test/fixtures/product_processes.yml
+++ b/test/fixtures/product_processes.yml
@@ -30,7 +30,7 @@
 #  repeatable   :boolean          not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
-#  variety_id   :integer          not null
+#  variety      :string(127)      not null
 #
 #
 # == Fixture: product_processes
@@ -44,5 +44,5 @@
 #   repeatable: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   variety_id: 1
+#   variety: "Lorem ipsum"
 #
