--- a/test/fixtures/preferences.yml
+++ b/test/fixtures/preferences.yml
@@ -47,4 +47,14 @@
 #   nature: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#
+
+preferences_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "interface.helps.collapsed"
+  nature: "boolean"
+  boolean_value: true
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  user_id: 1
