--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -114,7 +114,7 @@ product_natures_001:
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety: "animal"
+  variety: "bos"
 
 product_natures_002:
   active: true
