--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -237,7 +237,7 @@ animals_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 10
-  name: "Cow"
+  name: "IONOSPHERE"
   nature_id: 1
   number: "0010"
   owner_id: 1
@@ -251,7 +251,7 @@ animals_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 11
-  name: "Cow"
+  name: "ISABELLE"
   nature_id: 1
   number: "0011"
   owner_id: 1
