Begins the DMS interface and reviews kujakus for that

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -85,6 +85,8 @@
 # - "backend/dashboards#settings_relationship"
 # - "backend/dashboards#settings_sales"
 # - "backend/dashboards#settings_stocks"
+# - "backend/documents#index"
+# - "backend/documents#list"
 # - "backend/entity_addresses#show"
 # - "backend/entity_addresses#unroll"
 # - "backend/entity_links#show"
@@ -103,6 +105,7 @@
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
 # - "backend/journal_entry_items#show"
+# - "backend/kujakus#toggle"
 # - "backend/land_parcel_groups#create"
 # - "backend/land_parcel_groups#destroy"
 # - "backend/land_parcel_groups#edit"
