--- a/test/fixtures/document_archives.yml
+++ b/test/fixtures/document_archives.yml
@@ -18,34 +18,32 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: documents
+# == Table: document_archives
 #
-#  archives_count        :integer          default(0), not null
-#  created_at            :datetime         not null
-#  creator_id            :integer
-#  datasource            :string(63)
-#  datasource_parameters :text
-#  id                    :integer          not null, primary key
-#  lock_version          :integer          default(0), not null
-#  name                  :string(255)      not null
-#  nature                :string(63)       not null
-#  number                :string(63)       not null
-#  template_id           :integer
-#  template_type         :string(255)
-#  updated_at            :datetime         not null
-#  updater_id            :integer
+#  archived_at       :datetime
+#  created_at        :datetime         not null
+#  creator_id        :integer
+#  document_id       :integer          not null
+#  file_content_type :string(255)
+#  file_file_name    :string(255)
+#  file_file_size    :integer
+#  file_fingerprint  :string(255)
+#  file_updated_at   :datetime
+#  id                :integer          not null, primary key
+#  lock_version      :integer          default(0), not null
+#  position          :integer
+#  template_id       :integer
+#  updated_at        :datetime         not null
+#  updater_id        :integer
 #
 #
-# == Fixture: documents
+# == Fixture: document_archives
 #
-# documents_001:
-#   archives_count: 0
+# document_archives_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   document_id: 1
 #   id: 1
-#   name: "Lorem ipsum"
-#   nature: "Lorem ipsum"
-#   number: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
