Ignores JRXML files/links contained in config/locales/*/prints

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 /*/*/*/*/*/*/*~
 /*/*/*/*/*/*/*/*~
 
+config/locales/*/prints/*.jrxml
+
+
 # Ignore private files
 /private/**/*
 /config/database.yml
