--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -107,7 +107,7 @@ entities_001:
   client: false
   code: 00001
   full_name: Ferstivall LTD
-  last_name: Ferstivall LTD
+  last_name: C. Ferstivall LTD
   language: 'eng'
   of_company: true
   id: 1
