--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -55,6 +55,7 @@
 #
 custom_fields_001:
   active: true
+  column_name: "_test_field"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   customized_type: Entity
@@ -67,6 +68,7 @@ custom_fields_001:
 
 custom_fields_002:
   active: true
+  column_name: "_useless_field"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   customized_type: Entity
