--- a/test/fixtures/incoming_delivery_modes.yml
+++ b/test/fixtures/incoming_delivery_modes.yml
@@ -47,7 +47,7 @@ incoming_delivery_modes_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  name: "Lorem ipsum"
+  name: "Lorex ipsum"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
