--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -94,6 +94,7 @@ product_natures_001:
   active: true
   alive: true
   category_id: 1
+  charge_account_id: 1
   commercial_name: "Vache"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
