--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -174,6 +174,7 @@ buildings_003:
 land_parcels_001:
   area_measure: 17.12
   area_unit_id: 3
+  born_at: 1959-03-02 10:00:00 +01:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 6
@@ -186,11 +187,12 @@ land_parcels_001:
   type: 'LandParcel'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety: "land-parcel"
+  variety: "land_parcel"
 
 land_parcels_002:
   area_measure: 15.2
   area_unit_id: 3
+  born_at: 1959-07-02 10:00:00 +01:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 7
@@ -203,7 +205,7 @@ land_parcels_002:
   type: 'LandParcel'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety: "land-parcel"
+  variety: "land_parcel"
 
 equipments_001:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -344,7 +346,7 @@ product_groups_001:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
-  variety: "product-group"
+  variety: "product_group"
 
 product_groups_001:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -359,7 +361,7 @@ product_groups_001:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
-  variety: "product-group"
+  variety: "product_group"
 
 product_groups_001:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -374,4 +376,4 @@ product_groups_001:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
-  variety: "product-group"
+  variety: "product_group"
