--- a/test/fixtures/purchase_natures.yml
+++ b/test/fixtures/purchase_natures.yml
@@ -54,6 +54,7 @@ purchase_natures_001:
   creator_id: 1
   currency: 'EUR'
   id: 1
+  name: "Lorex"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   with_accounting: true
@@ -65,6 +66,7 @@ purchase_natures_002:
   creator_id: 1
   currency: 'EUR'
   id: 2
+  name: "Lorem"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   with_accounting: true
