--- a/test/fixtures/sale_natures.yml
+++ b/test/fixtures/sale_natures.yml
@@ -85,7 +85,7 @@ sale_natures_002:
   downpayment_percentage: 0
   expiration_delay: '10 days'
   id: 2
-  name: "Lorem ipsum"
+  name: "Lorex"
   payment_delay: '10 weeks'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
