--- a/test/fixtures/taxes.yml
+++ b/test/fixtures/taxes.yml
@@ -52,6 +52,8 @@
 #
 taxes_001:
   amount: 19.6
+  collected_account_id: 1
+  paid_account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
@@ -64,6 +66,8 @@ taxes_001:
 
 taxes_002:
   amount: 0
+  collected_account_id: 1
+  paid_account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
