--- a/test/fixtures/transports.yml
+++ b/test/fixtures/transports.yml
@@ -57,6 +57,7 @@ transports_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  number: "TR0001"
   transporter_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -67,6 +68,7 @@ transports_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  number: "TR0002"
   transporter_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
