--- a/test/fixtures/purchase_natures.yml
+++ b/test/fixtures/purchase_natures.yml
@@ -20,7 +20,8 @@
 #
 # == Table: purchase_natures
 #
-#  active          :boolean          not null
+#  active          :boolean          default(TRUE), not null
+#  by_default      :boolean          not null
 #  created_at      :datetime         not null
 #  creator_id      :integer
 #  currency        :string(3)
@@ -38,6 +39,7 @@
 #
 # purchase_natures_001:
 #   active: true
+#   by_default: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
