--- a/test/fixtures/sale_natures.yml
+++ b/test/fixtures/sale_natures.yml
@@ -21,6 +21,7 @@
 # == Table: sale_natures
 #
 #  active                  :boolean          default(TRUE), not null
+#  by_default              :boolean          not null
 #  created_at              :datetime         not null
 #  creator_id              :integer
 #  currency                :string(3)
@@ -46,6 +47,7 @@
 #
 # sale_natures_001:
 #   active: true
+#   by_default: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   downpayment: true
