--- a/test/fixtures/incoming_delivery_items.yml
+++ b/test/fixtures/incoming_delivery_items.yml
@@ -33,7 +33,7 @@
 #  purchase_item_id :integer          not null
 #  quantity         :decimal(19, 4)   default(1.0), not null
 #  tracking_id      :integer
-#  unit_id          :integer          not null
+#  unit             :string(255)
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #  warehouse_id     :integer
@@ -53,7 +53,6 @@
 #   product_id: 1
 #   purchase_item_id: 1
 #   quantity: 0
-#   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -68,7 +67,7 @@ incoming_delivery_items_001:
   price_id: 1
   product_id: 1
   quantity: 0
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -83,7 +82,7 @@ incoming_delivery_items_002:
   price_id: 1
   product_id: 1
   quantity: 0
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -98,7 +97,7 @@ incoming_delivery_items_003:
   price_id: 1
   product_id: 1
   quantity: 0
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
