--- a/test/fixtures/outgoing_delivery_items.yml
+++ b/test/fixtures/outgoing_delivery_items.yml
@@ -33,7 +33,7 @@
 #  quantity      :decimal(19, 4)   default(1.0), not null
 #  sale_item_id  :integer          not null
 #  tracking_id   :integer
-#  unit_id       :integer          not null
+#  unit          :string(255)
 #  updated_at    :datetime         not null
 #  updater_id    :integer
 #  warehouse_id  :integer
@@ -52,7 +52,6 @@
 #   product_id: 1
 #   quantity: 0
 #   sale_item_id: 1
-#   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
