--- a/test/fixtures/purchase_items.yml
+++ b/test/fixtures/purchase_items.yml
@@ -35,7 +35,7 @@
 #  quantity        :decimal(19, 4)   default(1.0), not null
 #  tracking_id     :integer
 #  tracking_serial :string(255)
-#  unit_id         :integer          not null
+#  unit            :string(255)
 #  updated_at      :datetime         not null
 #  updater_id      :integer
 #  warehouse_id    :integer
@@ -54,7 +54,6 @@
 #   product_id: 1
 #   purchase_id: 1
 #   quantity: 0
-#   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -69,7 +68,7 @@ purchase_items_001:
   price_id: 5
   product_id: 1
   quantity: 1
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -84,7 +83,7 @@ purchase_items_002:
   price_id: 5
   product_id: 1
   quantity: 2
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -99,7 +98,7 @@ purchase_items_003:
   price_id: 5
   product_id: 1
   quantity: 3
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -115,7 +114,7 @@ purchase_items_004:
   price_id: 5
   product_id: 1
   quantity: 7
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -131,6 +130,6 @@ purchase_items_005:
   price_id: 5
   product_id: 1
   quantity: 9
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
