--- a/test/fixtures/sale_items.yml
+++ b/test/fixtures/sale_items.yml
@@ -41,7 +41,7 @@
 #  sale_id              :integer          not null
 #  tax_id               :integer
 #  tracking_id          :integer
-#  unit_id              :integer
+#  unit                 :string(255)
 #  updated_at           :datetime         not null
 #  updater_id           :integer
 #  warehouse_id         :integer
@@ -74,7 +74,7 @@ sale_items_001:
   product_id: 1
   quantity: 1
   tax_id: 1
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -89,7 +89,7 @@ sale_items_002:
   product_id: 1
   quantity: 2
   tax_id: 1
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -104,7 +104,7 @@ sale_items_003:
   product_id: 1
   quantity: 30
   tax_id: 1
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -119,7 +119,7 @@ sale_items_004:
   product_id: 1
   quantity: 5
   tax_id: 1
-  unit_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -135,5 +135,6 @@ sale_items_005:
   reduction_percentage: 0
   sale_id: 4
   tax_id: 1
+  unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
