--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -66,7 +66,7 @@
 #  supplier                  :boolean          not null
 #  supplier_account_id       :integer
 #  transporter               :boolean          not null
-#  type                      :string(255)      not null
+#  type                      :string(255)
 #  updated_at                :datetime         not null
 #  updater_id                :integer
 #  vat_number                :string(15)
@@ -94,7 +94,6 @@
 #   reminder_submissive: true
 #   supplier: true
 #   transporter: true
-#   type: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #   vat_submissive: true
