--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -34,7 +34,7 @@
 #  procedure_id      :integer
 #  started_at        :datetime         not null
 #  stopped_at        :datetime
-#  type              :string(255)      not null
+#  type              :string(255)
 #  updated_at        :datetime         not null
 #  updater_id        :integer
 #
@@ -46,7 +46,6 @@
 #   creator_id: 1
 #   id: 1
 #   started_at: 2009-07-19 19:13:59 +02:00
-#   type: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
