--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -57,7 +57,7 @@
 #  sex                      :string(255)
 #  shape                    :spatial({:srid=>
 #  tracking_id              :integer
-#  type                     :string(255)      not null
+#  type                     :string(255)
 #  unit                     :string(255)      not null
 #  updated_at               :datetime         not null
 #  updater_id               :integer
@@ -84,7 +84,6 @@
 #   real_quantity: 0
 #   reproductor: true
 #   reservoir: true
-#   type: "Lorem ipsum"
 #   unit: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
