--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -70,7 +70,7 @@
 #  updated_at                :datetime         not null
 #  updater_id                :integer
 #  vat_number                :string(15)
-#  vat_submissive            :boolean          default(TRUE), not null
+#  vat_subjected             :boolean          default(TRUE), not null
 #  webpass                   :string(255)
 #
 #
@@ -96,7 +96,7 @@
 #   transporter: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   vat_submissive: true
+#   vat_subjected: true
 #
 
 legal_entities_001:
