add incident management ( MVC, CRUD, Test)

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -41,6 +41,7 @@
 # - "backend/animals#list"
 # - "backend/animals#list_children"
 # - "backend/animals#list_group"
+# - "backend/animals#list_incident"
 # - "backend/animals#list_indicator"
 # - "backend/animals#list_place"
 # - "backend/animals#new"
@@ -90,6 +91,14 @@
 # - "backend/entity_addresses#show"
 # - "backend/entity_addresses#unroll"
 # - "backend/entity_links#show"
+# - "backend/incidents#create"
+# - "backend/incidents#destroy"
+# - "backend/incidents#edit"
+# - "backend/incidents#index"
+# - "backend/incidents#list"
+# - "backend/incidents#new"
+# - "backend/incidents#show"
+# - "backend/incidents#update"
 # - "backend/interfacers#autocomplete"
 # - "backend/interfacers#product_trackings"
 # - "backend/interfacers#product_units"
@@ -244,6 +253,7 @@
 # - "backend/product_nature_indicators#show"
 # - "backend/product_nature_indicators#up"
 # - "backend/product_nature_indicators#update"
+# - "backend/product_natures#list_price_templates"
 # - "backend/product_natures#show"
 # - "backend/product_price_listings#list_templates"
 # - "backend/product_prices#create"
@@ -991,7 +1001,7 @@ manage_products:
 - "backend/product_natures#destroy"
 - "backend/product_natures#edit"
 - "backend/product_natures#list"
-- "backend/product_natures#list_prices"
+- "backend/product_natures#list_prices" #?
 - "backend/product_natures#new"
 - "backend/product_natures#update"
 
