--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -240,7 +240,7 @@ animals_001:
   type: 'Animal'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety: "animal"
+  variety: "bos"
 
 animals_002:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -254,7 +254,7 @@ animals_002:
   unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety: "animal"
+  variety: "bos"
 
 matters_001:
   created_at: 2009-07-19 19:13:59 +02:00
