Makes "affairs" working at very least

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -24,6 +24,9 @@
 # - "backend/activity_watchings#new"
 # - "backend/activity_watchings#show"
 # - "backend/activity_watchings#update"
+# - "backend/affairs#attach"
+# - "backend/affairs#detach"
+# - "backend/affairs#select"
 # - "backend/animal_groups#create"
 # - "backend/animal_groups#destroy"
 # - "backend/animal_groups#edit"
