--- a/test/fixtures/purchase_items.yml
+++ b/test/fixtures/purchase_items.yml
@@ -29,11 +29,13 @@
 #  lock_version      :integer          default(0), not null
 #  position          :integer
 #  pretax_amount     :decimal(19, 4)   default(0.0), not null
+#  price_amount      :decimal(19, 4)   not null
 #  price_id          :integer          not null
 #  price_template_id :integer
 #  product_id        :integer          not null
 #  purchase_id       :integer          not null
 #  quantity          :decimal(19, 4)   default(1.0), not null
+#  tax_id            :integer          not null
 #  tracking_id       :integer
 #  tracking_serial   :string(255)
 #  unit              :string(255)
@@ -51,24 +53,28 @@
 #   creator_id: 1
 #   id: 1
 #   pretax_amount: 0
+#   price_amount: 0
 #   price_id: 1
 #   product_id: 1
 #   purchase_id: 1
 #   quantity: 0
+#   tax_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 purchase_items_001:
   account_id: 1
-  amount: 0
+  amount: 10
   pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   purchase_id: 1
+  price_amount: 5
   price_id: 5
   product_id: 1
   quantity: 1
+  tax_id: 1
   unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -81,9 +87,11 @@ purchase_items_002:
   creator_id: 1
   id: 2
   purchase_id: 1
+  price_amount: 5
   price_id: 5
   product_id: 1
   quantity: 2
+  tax_id: 1
   unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -96,9 +104,11 @@ purchase_items_003:
   creator_id: 1
   id: 3
   purchase_id: 2
+  price_amount: 5
   price_id: 5
   product_id: 1
   quantity: 3
+  tax_id: 1
   unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -112,9 +122,11 @@ purchase_items_004:
   creator_id: 1
   id: 4
   purchase_id: 3
+  price_amount: 5
   price_id: 5
   product_id: 1
   quantity: 7
+  tax_id: 1
   unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -128,9 +140,11 @@ purchase_items_005:
   creator_id: 1
   id: 5
   purchase_id: 3
+  price_amount: 5
   price_id: 5
   product_id: 1
   quantity: 9
+  tax_id: 1
   unit: "unity"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
