--- a/test/fixtures/procedures.yml
+++ b/test/fixtures/procedures.yml
@@ -34,12 +34,18 @@
 #  updater_id   :integer
 #  version      :string(255)      not null
 #
-require 'test_helper'
-
-class ProcedureTest < ActiveSupport::TestCase
-
-  test "presence of fixtures" do
-    # assert_equal 2, Procedure.count
-  end
-
-end
+#
+# == Fixture: procedures
+#
+# procedures_001:
+#   activity_id: 1
+#   campaign_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   nomen: "Lorem ipsum"
+#   state: "Lorem ipsum"
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#   version: "Lorem ipsum"
+#
