--- a/test/fixtures/procedure_variables.yml
+++ b/test/fixtures/procedure_variables.yml
@@ -18,28 +18,28 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: procedures
+# == Table: procedure_variables
 #
-#  activity_id  :integer          not null
-#  campaign_id  :integer          not null
 #  created_at   :datetime         not null
 #  creator_id   :integer
 #  id           :integer          not null, primary key
-#  incident_id  :integer
 #  lock_version :integer          default(0), not null
 #  nomen        :string(255)      not null
-#  parent_id    :integer
-#  state        :string(255)      default("undone"), not null
+#  procedure_id :integer          not null
+#  target_id    :integer          not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
-#  version      :string(255)
 #
-require 'test_helper'
-
-class ProcedureTest < ActiveSupport::TestCase
-
-  test "presence of fixtures" do
-    # assert_equal 2, Procedure.count
-  end
-
-end
+#
+# == Fixture: procedure_variables
+#
+# procedure_variables_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   nomen: "Lorem ipsum"
+#   procedure_id: 1
+#   target_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
