--- a/test/fixtures/procedures.yml
+++ b/test/fixtures/procedures.yml
@@ -32,7 +32,7 @@
 #  state        :string(255)      default("undone"), not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer
-#  version      :string(255)      not null
+#  version      :string(255)
 #
 #
 # == Fixture: procedures
@@ -47,5 +47,4 @@
 #   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   version: "Lorem ipsum"
 #
