--- a/test/fixtures/operation_tasks.yml
+++ b/test/fixtures/operation_tasks.yml
@@ -23,6 +23,7 @@
 #  created_at         :datetime         not null
 #  creator_id         :integer
 #  detailled          :boolean          not null
+#  expression         :text
 #  id                 :integer          not null, primary key
 #  indicator_datum_id :integer
 #  lock_version       :integer          default(0), not null
@@ -31,7 +32,6 @@
 #  operand_unit       :string(255)
 #  operation_id       :integer          not null
 #  parent_id          :integer
-#  string             :string(255)      not null
 #  subject_id         :integer          not null
 #  updated_at         :datetime         not null
 #  updater_id         :integer
@@ -46,7 +46,6 @@
 #   detailled: true
 #   id: 1
 #   operation_id: 1
-#   string: "Lorem ipsum"
 #   subject_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
