--- a/config/rights.yml
+++ b/config/rights.yml
@@ -198,7 +198,7 @@
 # - "backend/procedures#index"
 # - "backend/procedures#list"
 # - "backend/procedures#new"
-# - "backend/procedures#run"
+# - "backend/procedures#play"
 # - "backend/procedures#show"
 # - "backend/procedures#update"
 # - "backend/product_groups#create"
