Try to enhance procedures...

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -196,6 +196,7 @@
 # - "backend/procedures#destroy"
 # - "backend/procedures#edit"
 # - "backend/procedures#index"
+# - "backend/procedures#jump"
 # - "backend/procedures#list"
 # - "backend/procedures#new"
 # - "backend/procedures#play"
@@ -324,6 +325,7 @@
 # - "backend/products#edit"
 # - "backend/products#new"
 # - "backend/products#show"
+# - "backend/products#unroll"
 # - "backend/products#update"
 # - "backend/professions#create"
 # - "backend/professions#destroy"
@@ -424,7 +426,7 @@ consult_entities:
 - "backend/entities#index"
 - "backend/entities#list"
 - "backend/entities#list_incoming_payments"
-- "backend/entities#list_meetings"
+- "backend/entities#list_meeting_participations"
 - "backend/entities#list_outgoing_payments"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
@@ -669,7 +671,7 @@ manage_entities:
 - "backend/entities#edit"
 - "backend/entities#list_incoming_payments"
 - "backend/entities#list_mandates"
-- "backend/entities#list_meetings"
+- "backend/entities#list_meeting_participations"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
 - "backend/entities#list_subscriptions"
