--- a/test/fixtures/incoming_deliveries.yml
+++ b/test/fixtures/incoming_deliveries.yml
@@ -21,20 +21,17 @@
 # == Table: incoming_deliveries
 #
 #  address_id       :integer
-#  amount           :decimal(19, 4)   default(0.0), not null
 #  created_at       :datetime         not null
 #  creator_id       :integer
-#  currency         :string(3)
-#  description      :text
 #  id               :integer          not null, primary key
 #  lock_version     :integer          default(0), not null
 #  mode_id          :integer
-#  moved_on         :date
 #  number           :string(255)
 #  planned_on       :date
-#  pretax_amount    :decimal(19, 4)   default(0.0), not null
 #  purchase_id      :integer
+#  received_at      :datetime
 #  reference_number :string(255)
+#  sender_id        :integer          not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #  weight           :decimal(19, 4)
@@ -43,34 +40,41 @@
 # == Fixture: incoming_deliveries
 #
 # incoming_deliveries_001:
-#   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   pretax_amount: 0
+#   sender_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 incoming_deliveries_001:
-  amount: 0
-  pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   mode_id: 1
   number: 'INDEL000001'
-  purchase_id: 1
+  sender_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 incoming_deliveries_002:
-  amount: 0
-  pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
   mode_id: 1
   number: 'INDEL000002'
+  sender_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+incoming_deliveries_003:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  mode_id: 1
+  number: 'INDEL000003'
   purchase_id: 1
+  sender_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
