--- a/test/fixtures/outgoing_deliveries.yml
+++ b/test/fixtures/outgoing_deliveries.yml
@@ -21,20 +21,17 @@
 # == Table: outgoing_deliveries
 #
 #  address_id       :integer
-#  amount           :decimal(19, 4)   default(0.0), not null
 #  created_at       :datetime         not null
 #  creator_id       :integer
-#  currency         :string(3)
-#  description      :text
 #  id               :integer          not null, primary key
 #  lock_version     :integer          default(0), not null
 #  mode_id          :integer
-#  moved_on         :date
 #  number           :string(255)
 #  planned_on       :date
-#  pretax_amount    :decimal(19, 4)   default(0.0), not null
+#  recipient_id     :integer          not null
 #  reference_number :string(255)
-#  sale_id          :integer          not null
+#  sale_id          :integer
+#  sent_at          :datetime
 #  transport_id     :integer
 #  transporter_id   :integer
 #  updated_at       :datetime         not null
@@ -45,50 +42,44 @@
 # == Fixture: outgoing_deliveries
 #
 # outgoing_deliveries_001:
-#   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   pretax_amount: 0
-#   sale_id: 1
+#   recipient_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 outgoing_deliveries_001:
-  amount: 0
-  pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   address_id: 1
   number: 'OUTDEL000001'
   planned_on: <%=Date.today-7%>
+  recipient_id: 1
   id: 1
-  sale_id: 3
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 outgoing_deliveries_002:
-  amount: 0
-  pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   address_id: 1
   number: 'OUTDEL000002'
   planned_on: <%=Date.today%>
+  recipient_id: 1
   id: 2
-  sale_id: 3
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 outgoing_deliveries_003:
-  amount: 0
-  pretax_amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   address_id: 1
   number: 'OUTDEL000003'
   planned_on: <%=Date.today+7%>
   id: 3
+  recipient_id: 1
   sale_id: 3
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
