--- a/test/fixtures/outgoing_delivery_items.yml
+++ b/test/fixtures/outgoing_delivery_items.yml
@@ -20,38 +20,28 @@
 #
 # == Table: outgoing_delivery_items
 #
-#  amount        :decimal(19, 4)   default(0.0), not null
-#  created_at    :datetime         not null
-#  creator_id    :integer
-#  delivery_id   :integer          not null
-#  id            :integer          not null, primary key
-#  lock_version  :integer          default(0), not null
-#  move_id       :integer
-#  pretax_amount :decimal(19, 4)   default(0.0), not null
-#  price_id      :integer          not null
-#  product_id    :integer          not null
-#  quantity      :decimal(19, 4)   default(1.0), not null
-#  sale_item_id  :integer          not null
-#  tracking_id   :integer
-#  unit          :string(255)
-#  updated_at    :datetime         not null
-#  updater_id    :integer
-#  warehouse_id  :integer
+#  created_at   :datetime         not null
+#  creator_id   :integer
+#  delivery_id  :integer          not null
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  move_id      :integer
+#  product_id   :integer          not null
+#  quantity     :decimal(19, 4)   default(1.0), not null
+#  sale_item_id :integer
+#  updated_at   :datetime         not null
+#  updater_id   :integer
 #
 #
 # == Fixture: outgoing_delivery_items
 #
 # outgoing_delivery_items_001:
-#   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   delivery_id: 1
 #   id: 1
-#   pretax_amount: 0
-#   price_id: 1
 #   product_id: 1
 #   quantity: 0
-#   sale_item_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
