--- a/config/rights.yml
+++ b/config/rights.yml
@@ -16,14 +16,6 @@
 # - "backend/activity_repartitions#new"
 # - "backend/activity_repartitions#show"
 # - "backend/activity_repartitions#update"
-# - "backend/activity_watchings#create"
-# - "backend/activity_watchings#destroy"
-# - "backend/activity_watchings#edit"
-# - "backend/activity_watchings#index"
-# - "backend/activity_watchings#list"
-# - "backend/activity_watchings#new"
-# - "backend/activity_watchings#show"
-# - "backend/activity_watchings#update"
 # - "backend/affairs#attach"
 # - "backend/affairs#detach"
 # - "backend/affairs#index"
@@ -329,6 +321,14 @@
 # - "backend/production_chains#new"
 # - "backend/production_chains#show"
 # - "backend/production_chains#update"
+# - "backend/productions#create"
+# - "backend/productions#destroy"
+# - "backend/productions#edit"
+# - "backend/productions#index"
+# - "backend/productions#list"
+# - "backend/productions#new"
+# - "backend/productions#show"
+# - "backend/productions#update"
 # - "backend/products#create"
 # - "backend/products#destroy"
 # - "backend/products#edit"
