--- a/test/fixtures/procedures.yml
+++ b/test/fixtures/procedures.yml
@@ -20,28 +20,26 @@
 #
 # == Table: procedures
 #
-#  activity_id  :integer          not null
-#  campaign_id  :integer          not null
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  id           :integer          not null, primary key
-#  incident_id  :integer
-#  lock_version :integer          default(0), not null
-#  nomen        :string(255)      not null
-#  state        :string(255)      default("undone"), not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at    :datetime         not null
+#  creator_id    :integer
+#  id            :integer          not null, primary key
+#  incident_id   :integer
+#  lock_version  :integer          default(0), not null
+#  nomen         :string(255)      not null
+#  production_id :integer          not null
+#  state         :string(255)      default("undone"), not null
+#  updated_at    :datetime         not null
+#  updater_id    :integer
 #
 #
 # == Fixture: procedures
 #
 # procedures_001:
-#   activity_id: 1
-#   campaign_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
 #   nomen: "Lorem ipsum"
+#   production_id: 1
 #   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
