--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -18,29 +18,35 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: activity_watchings
+# == Table: productions
 #
 #  activity_id       :integer          not null
-#  area_unit         :string(255)
+#  campaign_id       :integer          not null
 #  created_at        :datetime         not null
 #  creator_id        :integer
 #  id                :integer          not null, primary key
 #  lock_version      :integer          default(0), not null
 #  position          :integer
 #  product_nature_id :integer          not null
+#  started_at        :datetime
+#  state             :string(255)
+#  static_storage    :boolean          not null
+#  stopped_at        :datetime
+#  storage_id        :integer
 #  updated_at        :datetime         not null
 #  updater_id        :integer
-#  work_unit         :string(255)
 #
 #
-# == Fixture: activity_watchings
+# == Fixture: productions
 #
-# activity_watchings_001:
+# productions_001:
 #   activity_id: 1
+#   campaign_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
 #   product_nature_id: 1
+#   static_storage: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
