--- a/test/fixtures/entity_addresses.yml
+++ b/test/fixtures/entity_addresses.yml
@@ -98,3 +98,19 @@ entity_addresses_003:
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
+
+entity_addresses_004:
+  entity_id: 301
+  code: AAAC
+  by_default: true
+  canal: mail
+  coordinate: Mr Jones, Somewhere, 12345 InTheWorld
+  mail_line_1: Mr Jones
+  mail_line_4: 2 Somewhere
+  mail_line_6: 12345 InTheWorld
+  mail_area_id: 2
+  id: 4
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
