--- a/test/fixtures/incoming_deliveries.yml
+++ b/test/fixtures/incoming_deliveries.yml
@@ -49,6 +49,7 @@
 #
 
 incoming_deliveries_001:
+  address_id: 3
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
@@ -59,6 +60,7 @@ incoming_deliveries_001:
   updater_id: 1
 
 incoming_deliveries_002:
+  address_id: 3
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
@@ -69,6 +71,7 @@ incoming_deliveries_002:
   updater_id: 1
 
 incoming_deliveries_003:
+  address_id: 3
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
