--- a/test/fixtures/outgoing_deliveries.yml
+++ b/test/fixtures/outgoing_deliveries.yml
@@ -51,6 +51,7 @@
 #
 
 outgoing_deliveries_001:
+  address_id: 4
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   address_id: 1
@@ -62,6 +63,7 @@ outgoing_deliveries_001:
   updater_id: 1
 
 outgoing_deliveries_002:
+  address_id: 4
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   address_id: 1
@@ -73,6 +75,7 @@ outgoing_deliveries_002:
   updater_id: 1
 
 outgoing_deliveries_003:
+  address_id: 4
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   address_id: 1
