refactorize Product inheritance (medicines,organic matter) in progress.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -151,6 +151,14 @@
 # - "backend/matters#picture"
 # - "backend/matters#show"
 # - "backend/matters#update"
+# - "backend/medicines#create"
+# - "backend/medicines#destroy"
+# - "backend/medicines#edit"
+# - "backend/medicines#index"
+# - "backend/medicines#list"
+# - "backend/medicines#new"
+# - "backend/medicines#show"
+# - "backend/medicines#update"
 # - "backend/operation_tasks#create"
 # - "backend/operation_tasks#destroy"
 # - "backend/operation_tasks#edit"
@@ -160,6 +168,14 @@
 # - "backend/operation_tasks#show"
 # - "backend/operation_tasks#update"
 # - "backend/operations#unroll"
+# - "backend/organic_matters#create"
+# - "backend/organic_matters#destroy"
+# - "backend/organic_matters#edit"
+# - "backend/organic_matters#index"
+# - "backend/organic_matters#list"
+# - "backend/organic_matters#new"
+# - "backend/organic_matters#show"
+# - "backend/organic_matters#update"
 # - "backend/people#create"
 # - "backend/people#destroy"
 # - "backend/people#edit"
@@ -168,14 +184,6 @@
 # - "backend/people#new"
 # - "backend/people#show"
 # - "backend/people#update"
-# - "backend/places#create"
-# - "backend/places#destroy"
-# - "backend/places#edit"
-# - "backend/places#index"
-# - "backend/places#list"
-# - "backend/places#new"
-# - "backend/places#show"
-# - "backend/places#update"
 # - "backend/plants#create"
 # - "backend/plants#destroy"
 # - "backend/plants#edit"
