add CRUD settlement, work on production module.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -31,6 +31,14 @@
 # - "backend/animal_groups#new"
 # - "backend/animal_groups#show"
 # - "backend/animal_groups#update"
+# - "backend/animal_medicines#create"
+# - "backend/animal_medicines#destroy"
+# - "backend/animal_medicines#edit"
+# - "backend/animal_medicines#index"
+# - "backend/animal_medicines#list"
+# - "backend/animal_medicines#new"
+# - "backend/animal_medicines#show"
+# - "backend/animal_medicines#update"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
@@ -184,6 +192,14 @@
 # - "backend/people#new"
 # - "backend/people#show"
 # - "backend/people#update"
+# - "backend/plant_medicines#create"
+# - "backend/plant_medicines#destroy"
+# - "backend/plant_medicines#edit"
+# - "backend/plant_medicines#index"
+# - "backend/plant_medicines#list"
+# - "backend/plant_medicines#new"
+# - "backend/plant_medicines#show"
+# - "backend/plant_medicines#update"
 # - "backend/plants#create"
 # - "backend/plants#destroy"
 # - "backend/plants#edit"
@@ -321,6 +337,14 @@
 # - "backend/professions#update"
 # - "backend/purchase_items#show"
 # - "backend/sale_items#show"
+# - "backend/settlements#create"
+# - "backend/settlements#destroy"
+# - "backend/settlements#edit"
+# - "backend/settlements#index"
+# - "backend/settlements#list"
+# - "backend/settlements#new"
+# - "backend/settlements#show"
+# - "backend/settlements#update"
 # - "backend/snippets#toggle"
 
 # Access to the minimum
