adapt model and fixes CRUD in production.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -322,6 +322,14 @@
 # - "backend/product_transfers#list_confirm"
 # - "backend/product_transfers#new"
 # - "backend/product_transfers#update"
+# - "backend/production_supports#create"
+# - "backend/production_supports#destroy"
+# - "backend/production_supports#edit"
+# - "backend/production_supports#index"
+# - "backend/production_supports#list"
+# - "backend/production_supports#new"
+# - "backend/production_supports#show"
+# - "backend/production_supports#update"
 # - "backend/products#create"
 # - "backend/products#destroy"
 # - "backend/products#edit"
