--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -30,9 +30,8 @@
 #  product_nature_id :integer          not null
 #  started_at        :datetime
 #  state             :string(255)
-#  static_storage    :boolean          not null
+#  static_support    :boolean          not null
 #  stopped_at        :datetime
-#  storage_id        :integer
 #  updated_at        :datetime         not null
 #  updater_id        :integer
 #
@@ -46,7 +45,7 @@
 #   creator_id: 1
 #   id: 1
 #   product_nature_id: 1
-#   static_storage: true
+#   static_support: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
