--- a/test/fixtures/production_supports.yml
+++ b/test/fixtures/production_supports.yml
@@ -25,7 +25,7 @@
 #  id            :integer          not null, primary key
 #  lock_version  :integer          default(0), not null
 #  production_id :integer          not null
-#  support_id    :integer          not null
+#  storage_id    :integer          not null
 #  updated_at    :datetime         not null
 #  updater_id    :integer
 #
@@ -37,7 +37,7 @@
 #   creator_id: 1
 #   id: 1
 #   production_id: 1
-#   support_id: 1
+#   storage_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
