--- a/test/fixtures/product_moves.yml
+++ b/test/fixtures/product_moves.yml
@@ -20,21 +20,17 @@
 #
 # == Table: product_moves
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  id           :integer          not null, primary key
-#  last_done    :boolean          not null
-#  lock_version :integer          default(0), not null
-#  mode         :string(255)      not null
-#  origin_id    :integer
-#  origin_type  :string(255)
-#  product_id   :integer          not null
-#  quantity     :decimal(19, 4)   not null
-#  started_at   :datetime         not null
-#  stopped_at   :datetime         not null
-#  unit         :string(255)      not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at       :datetime         not null
+#  creator_id       :integer
+#  id               :integer          not null, primary key
+#  initial          :boolean          not null
+#  lock_version     :integer          default(0), not null
+#  population_delta :decimal(19, 4)   not null
+#  product_id       :integer          not null
+#  started_at       :datetime
+#  stopped_at       :datetime
+#  updated_at       :datetime         not null
+#  updater_id       :integer
 #
 #
 # == Fixture: product_moves
@@ -43,16 +39,13 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   last_done: true
-#   mode: "Lorem ipsum"
+#   initial: true
+#   population_delta: 0
 #   product_id: 1
-#   quantity: 0
-#   started_at: 2009-07-19 19:13:59 +02:00
-#   stopped_at: 2009-07-19 19:13:59 +02:00
-#   unit: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 product_moves_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -60,11 +53,9 @@ product_moves_001:
   started_at: 2009-07-19 19:11:59 +02:00
   stopped_at: 2009-07-19 19:13:59 +02:00
   product_id: 1
-  quantity: 0
-  unit: "unity"
+  population_delta: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  mode: "real"
 
 product_moves_002:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -73,11 +64,9 @@ product_moves_002:
   started_at: 2009-07-19 17:13:59 +02:00
   stopped_at: 2009-07-19 19:13:59 +02:00
   product_id: 1
-  quantity: 0
-  unit: "unity"
+  population_delta: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  mode: "virtual"
 
 product_moves_003:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -86,8 +75,6 @@ product_moves_003:
   started_at: 2009-07-11 19:13:59 +02:00
   stopped_at: 2009-07-19 19:13:59 +02:00
   product_id: 1
-  quantity: -15
-  unit: "unity"
+  population_delta: -15
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  mode: "real"
