--- a/test/fixtures/product_indicator_data.yml
+++ b/test/fixtures/product_indicator_data.yml
@@ -20,21 +20,23 @@
 #
 # == Table: product_indicator_data
 #
-#  boolean_value :boolean          not null
-#  choice_value  :string(255)
-#  created_at    :datetime         not null
-#  creator_id    :integer
-#  decimal_value :decimal(19, 4)
-#  id            :integer          not null, primary key
-#  indicator     :string(255)      not null
-#  lock_version  :integer          default(0), not null
-#  measure_unit  :string(255)
-#  measure_value :decimal(19, 4)
-#  measured_at   :datetime
-#  product_id    :integer          not null
-#  string_value  :text
-#  updated_at    :datetime         not null
-#  updater_id    :integer
+#  boolean_value       :boolean          not null
+#  choice_value        :string(255)
+#  created_at          :datetime         not null
+#  creator_id          :integer
+#  decimal_value       :decimal(19, 4)
+#  geometry_value      :spatial({:srid=>
+#  id                  :integer          not null, primary key
+#  indicator           :string(255)      not null
+#  indicator_datatype  :string(255)      not null
+#  lock_version        :integer          default(0), not null
+#  measure_value_unit  :string(255)
+#  measure_value_value :decimal(19, 4)
+#  measured_at         :datetime         not null
+#  product_id          :integer          not null
+#  string_value        :text
+#  updated_at          :datetime         not null
+#  updater_id          :integer
 #
 #
 # == Fixture: product_indicator_data
@@ -45,6 +47,8 @@
 #   creator_id: 1
 #   id: 1
 #   indicator: "Lorem ipsum"
+#   indicator_datatype: "Lorem ipsum"
+#   measured_at: 2009-07-19 19:13:59 +02:00
 #   product_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
