add a more complete view on products and product_groups

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -59,6 +59,7 @@
 # - "backend/building_divisions#edit"
 # - "backend/building_divisions#index"
 # - "backend/building_divisions#list"
+# - "backend/building_divisions#list_content_product"
 # - "backend/building_divisions#new"
 # - "backend/building_divisions#show"
 # - "backend/building_divisions#update"
@@ -77,9 +78,10 @@
 # - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/expense_chart_cells#show"
+# - "backend/cells/last_events_cells#list"
+# - "backend/cells/last_events_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
-# - "backend/cells/last_procedures_cells#list"
 # - "backend/cells/last_procedures_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
@@ -255,7 +257,12 @@
 # - "backend/product_groups#edit"
 # - "backend/product_groups#index"
 # - "backend/product_groups#list"
-# - "backend/product_groups#list_products"
+# - "backend/product_groups#list_content_product"
+# - "backend/product_groups#list_group"
+# - "backend/product_groups#list_incident"
+# - "backend/product_groups#list_indicator"
+# - "backend/product_groups#list_member"
+# - "backend/product_groups#list_place"
 # - "backend/product_groups#new"
 # - "backend/product_groups#show"
 # - "backend/product_groups#update"
@@ -338,6 +345,12 @@
 # - "backend/products#create"
 # - "backend/products#destroy"
 # - "backend/products#edit"
+# - "backend/products#list_content_product"
+# - "backend/products#list_group"
+# - "backend/products#list_incident"
+# - "backend/products#list_indicator"
+# - "backend/products#list_member"
+# - "backend/products#list_place"
 # - "backend/products#new"
 # - "backend/products#show"
 # - "backend/products#unroll"
@@ -450,7 +463,7 @@ consult_entities:
 - "backend/entities#list_outgoing_payments"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
-- "backend/entities#list_subscriptions"
+- "backend/entities#list_subscriptions" #?
 - "backend/entities#show"
 
 # Consult the journal entries
@@ -694,7 +707,7 @@ manage_entities:
 - "backend/entities#list_meeting_participations"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
-- "backend/entities#list_subscriptions"
+- "backend/entities#list_subscriptions" #?
 - "backend/entities#new"
 - "backend/entities#picture"
 - "backend/entities#update"
